# next-eel-ts

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
next-eel-ts/: main.py
src/pages/: index.tsx
