[tool.poetry]
name = "next-eel-ts"
version = "0.1.0"
description = ""
authors = ["Tatsu015 <tatsumi.soichiro@gmail.com>"]
readme = "README.md"
packages = [{include = "next_eel_ts"}]

[tool.poetry.dependencies]
python = "^3.10"
Eel = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
