[tool.poetry]
name = "next-eel-ts"
version = "0.1.0"
description = ""
authors = ["Tatsu015 <tatsumi.soichiro@gmail.com>"]
readme = "README.md"
packages = [{include = "next-eel-ts"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.7,"
Eel = "^0.15.1"
pyinstaller = "^5.7.0"
bottle = "^0.12.23"
bottle-websocket = "^0.2.9"
future = "^0.18.3"
whichcraft = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
